# ledfx-android

./: .gitignore  README.md  buildozer.spec  pyproject.toml
recipes/aiohttp/: __init__.py
recipes/aubio/: __init__.py
recipes/aubio-ledfx/: __init__.py
recipes/ledfx/: __init__.py
recipes/pybase64/: __init__.py
recipes/requests/: __init__.py
recipes/samplerate/: __init__.py
recipes/samplerate-ledfx/: __init__.py
recipes/uvloop/: __init__.py
recipes/vnoise/: __init__.py
recipes/zeroconf/: __init__.py
scripts/: clean-ledfx.py  update_icons.py
src/: android_audiorecord.py  leanback.py  ledfx_bootstrap.py  main.py  sounddevice.py
