[project]
name = "ledfx-android"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "buildozer>=1.5.0",
    "pip>=26.0.1",
]

[tool.uv.sources]
buildozer = { git = "https://github.com/kivy/buildozer", rev = "91ce81b" }

[dependency-groups]
dev = [
    "pillow>=12.1.1",
]
